tests/semantic/valid/complex_programs/calls_and_arith.src
fn add(int a, int b) -> int {
  return a + b;
}

fn main() -> int {
  return add(1, 2);
}
